fix identity image alignment

--- a/src/app/shared/loan-list/loan-list.component.scss
+++ b/src/app/shared/loan-list/loan-list.component.scss
@@ -105,6 +105,7 @@
         img {
           max-width: 100%;
           height: 25px;
+          margin: auto;
         }
       }
       &--avatar {
